--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <ul id="message-feed" class="feed"></ul>
 
   <form id="message-editor" class="editor">
-    <input name="author" autocomplete="off" placeholder="Имя" id="input" />
+    <input name="author" autocomplete="off" placeholder="Имя" id="input" required />
     <textarea name="massage" placeholder="Введите текст" required></textarea>
     <button type="submit">Отправить</button>
   </form>
